<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dip"
        android:singleLine="true"
        android:text="@string/movement_id"
        android:textColor="#000000"
        android:textSize="15sp" />

    <View
        android:layout_width="1.5dip"
        android:layout_height="fill_parent"
        android:background="#B4B3B3" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingBottom="10dip"
        android:paddingTop="10dip"
        android:singleLine="true"
        android:text="@string/movement_bodypart"
        android:textColor="#000000"
        android:textSize="15sp" />

    <View
        android:layout_width="1.5dip"
        android:layout_height="fill_parent"
        android:background="#B4B3B3" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center"
        android:paddingBottom="10dip"
        android:paddingTop="10dip"
        android:singleLine="true"
        android:text="@string/movement_name"
        android:textColor="#000000"
        android:textSize="15sp" />

    <View
        android:layout_width="1.5dip"
        android:layout_height="fill_parent"
        android:background="#B4B3B3" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:gravity="center"
        android:paddingBottom="10dip"
        android:paddingTop="10dip"
        android:singleLine="true"
        android:text="@string/movement_group_count"
        android:textColor="#000000"
        android:textSize="15sp" />

    <View
        android:layout_width="1.5dip"
        android:layout_height="fill_parent"
        android:background="#B4B3B3" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:gravity="center"
        android:paddingBottom="10dip"
        android:paddingTop="10dip"
        android:singleLine="true"
        android:text="@string/movement_count"
        android:textColor="#000000"
        android:textSize="15sp" />

    <View
        android:layout_width="1.5dip"
        android:layout_height="fill_parent"
        android:background="#B4B3B3" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:gravity="center"
        android:paddingBottom="10dip"
        android:paddingTop="10dip"
        android:singleLine="true"
        android:text="@string/movement_weight"
        android:textColor="#000000"
        android:textSize="15sp" />


</LinearLayout>